--- a/package.json
+++ b/package.json
@@ -92,19 +92,26 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
+    "cucumber": "^6.0.7",
+    "cypress": "^13.6.1",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "^8.55.0",
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "jest",
+    "test_jest": "jest",
     "lint": "eslint .",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test": "cypress run"
   },
   "jest": {
     "verbose": true,
     "collectCoverage": true
   },
   "author": "Enrique Sanchez",
-  "license": "ISC"
+  "license": "ISC",
+  "processor": {
+    "nonGlobalStepDefinitions": true
+  }
 }
