--- a/package.json
+++ b/package.json
@@ -92,11 +92,13 @@
     "yocto-queue": "^0.1.0"
   },
   "devDependencies": {
+    "cypress": "^13.6.1",
     "eslint": "^8.55.0",
     "eslint-plugin-jest": "^27.6.0",
     "jest": "^29.7.0"
   },
   "scripts": {
+    "e2e" : "cypress run",
     "test": "jest",
     "lint": "eslint .",
     "test:coverage": "jest --coverage"
